--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="custom.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
     <script src="js/jquery-2.1.4.min.js"></script>
@@ -98,7 +99,8 @@
             <div class="row">
                 <section id="hours" class="col-sm-4">
                     <span>Contact:</span><br> <i class="bi bi-instagram text-danger"></i><a href="https://www.instagram.com/ieeegecbh/" class="text decoration:none">ieeegecbh</a>
-                                       <br><br><br>                                                  
+                                       <br><br><br> 
+			<a href="#" class="fa fa-facebook"></a>
                     <i class="bi bi-facebook text-info"></i><a href="https://www.facebook.com/gecbieee"class=text decoration:none>IEEE GECBH</a>
                     <br><br><br>
                     
