--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
         <div class="container-fluid">
             <div class="row">
                 <section id="hours" class="col-sm-4">
-                    <span>Contact:</span><br> <i class="bi bi-instagram text-danger"></i><a href="https://www.instagram.com/ieeegecbh/" class="text decoration:none">ieeegecbh</a>
+                    <span>Contact:</span><br> 
+			<a href="#" class="fa fa-instagram"></a>
+			<i class="bi bi-instagram text-danger"></i><a href="https://www.instagram.com/ieeegecbh/" class="text decoration:none">ieeegecbh</a>
                                        <br><br><br> 
 			<a href="#" class="fa fa-facebook"></a>
                     <i class="bi bi-facebook text-info"></i><a href="https://www.facebook.com/gecbieee"class=text decoration:none>IEEE GECBH</a>
