--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <section id="hours" class="col-sm-4">
                     <span>Contact:</span><br> 
-			<a href="#" class="fa fa-instagram"></a>
+			<a href="#" class="fa fab-instagram"></a>
 			<i class="bi bi-instagram text-danger"></i><a href="https://www.instagram.com/ieeegecbh/" class="text decoration:none">ieeegecbh</a>
                                        <br><br><br> 
 			<a href="#" class="fa fa-facebook"></a>
